--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,65 +1,105 @@
 body {
 	margin: 0;
 	padding: 0;
+	overflow: hidden;
 }
 
-#arcMenu-content {
-	max-width: 300px;
-	height: 300px;
-	margin-left: auto;
-	margin-right: auto;
-	background-color: #eee;
+/*    Core CSS   核心CSS */
+#iArcMenu-content {
+	
 }
 
 /*
 Basic Shape CSS
 */
-.arcMenu-shape {
+.iArcMenu-shape {
 	position: absolute;
-	margin-left: 125px;
-	margin-top: 125px;
 	height: 50px;
 	width: 50px;
 	line-height: 45px;
-	-webkit-border-radius: 2em 2em 2em 2em;
-	-moz-border-radius: 2em 2em 2em 2em;
-	border-radius: 2em 2em 2em 2em;
 	transition: 2s;
 	cursor: pointer;
 	font-size: 10px;
-}
-
-.arcMenu-shape div {
 	text-align: center;
 	vertical-align: middle;
 }
 
-.arcMenu-control {
+/*
+Control Button CSS
+*/
+.iArcMenu-control {
 	position: absolute;
-	margin-left: 125px;
-	margin-top: 125px;
 	height: 50px;
 	width: 50px;
 	line-height: 45px;
-	-webkit-border-radius: 2em 2em 2em 2em;
-	-moz-border-radius: 2em 2em 2em 2em;
-	border-radius: 2em 2em 2em 2em;
 	cursor: pointer;
 	font-size: 10px;
-	background-color: #ffffff;
-}
-
-.arcMenu-control div {
 	text-align: center;
 	vertical-align: middle;
 }
 
-.arcMenu-control-on {
-
-	background: #ffffff url('../img/plus.png') no-repeat center center;
+.iArcMenu-control-on {
+	background: #ffffff url('../img/plus.png') center center;
+	background-size: cover;
 }
 
-.arcMenu-control-off {
+.iArcMenu-control-off {
 
-	background: #ffffff url('../img/minus.png') no-repeat center center;
+	background: #ffffff url('../img/minus.png') center center;
+	background-size: cover;
+}
+
+/* Customized CSS 自定义 */
+
+#iArcMenu-content {
+	position: absolute;
+	width: 50%;
+	height: 50%;
+	max-height: 100%;
+	background-color: #eee;
+	margin: auto;
+	top: 0; 
+	left: 0; 
+	bottom: 0; 
+	right: 0;
+}
+
+.iArcMenu-shape {
+	margin: auto;
+	top: 0; 
+	left: 0; 
+	bottom: 0; 
+	right: 0;
+}
+
+.iArcMenu-control {
+	margin: auto;
+	top: 0; 
+	left: 0; 
+	bottom: 0; 
+	right: 0;
+}
+
+.iArcMenu-shape:nth-child(1) {
+	background-color: #e74c3c;
+}
+
+.iArcMenu-shape:nth-child(2) {
+	background-color: #2ecc71;
+}
+
+.iArcMenu-shape:nth-child(3) {
+	background-color: #e74c3c;
+}
+
+.iArcMenu-shape:nth-child(4) {
+	background-color: #f1c40f;
+}
+
+.iArcMenu-shape:nth-child(5) {
+	background-color: #2ecc71;
+}
+
+.iArcMenu-shape:nth-child(6) {
+	background-color: #f1c40f;
 }
