--- a/src/css/common.css
+++ b/src/css/common.css
@@ -6,7 +6,7 @@ body {
 
 /*    Core CSS   核心CSS */
 #iArcMenu-content {
-	
+	font-size: 16px;
 }
 
 /*
@@ -17,11 +17,13 @@ Basic Shape CSS
 	height: 50px;
 	width: 50px;
 	line-height: 45px;
-	transition: 2s;
 	cursor: pointer;
-	font-size: 10px;
+	font-size: 1em;
 	text-align: center;
-	vertical-align: middle;
+	display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-box-pack: center;
+    -webkit-box-align: center;
 }
 
 /*
@@ -47,59 +49,4 @@ Control Button CSS
 
 	background: #ffffff url('../img/minus.png') center center;
 	background-size: cover;
-}
-
-/* Customized CSS 自定义 */
-
-#iArcMenu-content {
-	position: absolute;
-	width: 50%;
-	height: 50%;
-	max-height: 100%;
-	background-color: #eee;
-	margin: auto;
-	top: 0; 
-	left: 0; 
-	bottom: 0; 
-	right: 0;
-}
-
-.iArcMenu-shape {
-	margin: auto;
-	top: 0; 
-	left: 0; 
-	bottom: 0; 
-	right: 0;
-}
-
-.iArcMenu-control {
-	margin: auto;
-	top: 0; 
-	left: 0; 
-	bottom: 0; 
-	right: 0;
-}
-
-.iArcMenu-shape:nth-child(1) {
-	background-color: #e74c3c;
-}
-
-.iArcMenu-shape:nth-child(2) {
-	background-color: #2ecc71;
-}
-
-.iArcMenu-shape:nth-child(3) {
-	background-color: #e74c3c;
-}
-
-.iArcMenu-shape:nth-child(4) {
-	background-color: #f1c40f;
-}
-
-.iArcMenu-shape:nth-child(5) {
-	background-color: #2ecc71;
-}
-
-.iArcMenu-shape:nth-child(6) {
-	background-color: #f1c40f;
 }
